<resources>
    <string name="number_of_repositories">Number of results: 42</string>
</resources>